Adding in banner for disabled pro theme channels. #4294

--- a/src/app/modules/channels/v2/actions/actions.component.html
+++ b/src/app/modules/channels/v2/actions/actions.component.html
@@ -3,6 +3,7 @@
     <m-channelActions__boost></m-channelActions__boost>
     <m-channelActions__edit></m-channelActions__edit>
   </ng-container>
+  <m-channelActions__proChannel></m-channelActions__proChannel>
   <ng-template #nonOwner>
     <m-channelActions__menuButton></m-channelActions__menuButton>
 
