Disable drag n drop images when quoting posts #4360

--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -5,6 +5,7 @@
   "
   m-dragAndDrop
   (onFileDropped)="onAttachmentPaste($event)"
+  [disabled]="(remind$ | async) ? true : false"
 >
   <div class="m-composerBase__container">
     <m-composer__titleBar
