(feat): implement token value badge to wallet - engine#1856

--- a/src/app/modules/wallet/components/dashboard.component.html
+++ b/src/app/modules/wallet/components/dashboard.component.html
@@ -38,5 +38,7 @@
         >Cash</a
       >
     </div>
+    <div class="m-layout__spacer"></div>
+    <m-wallet__tokenPriceBadge></m-wallet__tokenPriceBadge>
   </div>
 </ng-template>
