(fix): bulb not showing in token price

--- a/src/app/modules/wallet/components/components/token-price-badge/token-price-badge.component.html
+++ b/src/app/modules/wallet/components/components/token-price-badge/token-price-badge.component.html
@@ -1,5 +1,5 @@
 <div class="m-walletTokenPriceBadge__logo">
-  <img src="../../../../../../assets/logos/bulb.svg" />
+  <img src="{{ cdnAssetsUrl }}assets/logos/bulb.svg" />
 </div>
 
 <div class="m-walletTokenPriceBadge__amount">
