--- a/src/app/modules/wallet/components/tokens/dropdown-menu/dropdown-menu.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/dropdown-menu/dropdown-menu.component.ng.scss
@@ -3,4 +3,11 @@
 :host {
   display: inline-block;
   vertical-align: middle;
+
+  // We need this element to be off the screen
+  .m-walletTokensDropdown__copyToClipboardContent {
+    position: absolute;
+    top: -10000px;
+    left: -10000px;
+  }
 }
