--- a/src/app/modules/wallet/components/components/earnings/earnings.component.html
+++ b/src/app/modules/wallet/components/components/earnings/earnings.component.html
@@ -30,7 +30,11 @@
         <td>Total</td>
         <td>
           <m-wallet__currencyValue
-            [value]="earningsTotal$ | async"
+            [value]="
+              currencyType === 'tokens'
+                ? (earningsTotal$ | async | token)
+                : (earningsTotal$ | async)
+            "
             [currency]="currencyType"
           ></m-wallet__currencyValue>
         </td>
@@ -44,7 +48,11 @@
           <td>{{ getFriendlyLabel(earningsGroup.id) }}</td>
           <td>
             <m-wallet__currencyValue
-              [value]="earningsGroup.amount_usd"
+              [value]="
+                currencyType === 'tokens'
+                  ? (earningsGroup.amount_tokens | token)
+                  : earningsGroup.amount_usd
+              "
               [currency]="currencyType"
             ></m-wallet__currencyValue>
           </td>
@@ -69,7 +77,11 @@
           </td>
           <td colspan="2">
             <m-wallet__currencyValue
-              [value]="item.amount_usd"
+              [value]="
+                currencyType === 'tokens'
+                  ? (earningsGroup.amount_tokens | token)
+                  : earningsGroup.amount_usd
+              "
               [currency]="currencyType"
             ></m-wallet__currencyValue>
           </td>
