(fix): incorrect tooltip for disconnected wallets

--- a/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
@@ -48,7 +48,9 @@
           >
             <span *ngIf="!wallet.receiver.address">Connect Wallet</span>
             <span *ngIf="wallet.receiver.address">Reconnect Wallet</span>
-            <m-tooltip icon="add_circle">Your address is verified</m-tooltip>
+            <m-tooltip icon="add_circle"
+              >Connect your address to start earnings rewards</m-tooltip
+            >
           </div>
 
           <div
