dont show 'start the conversation' when no comments

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -121,8 +121,8 @@
                 i18n-title="@@M__COMMON__MATURE_CONTENT"
                 >explicit</i
               >
-              <span i18n="@@M__COMMON__CONFIRM_18"
-                >Click to confirm you are 18+</span
+              <span i18n="@@M__COMMON__CONFIRM_EXPLICIT"
+                >Click to view explicit content</span
               >
             </span>
           </div>
@@ -154,8 +154,8 @@
                 i18n-title="@@M__COMMON__MATURE_CONTENT"
                 >explicit</i
               >
-              <span i18n="@@M__COMMON__CONFIRM_18"
-                >Click to confirm you are 18+</span
+              <span i18n="@@M__COMMON__CONFIRM_EXPLICIT"
+                >Click to view explicit content</span
               >
             </span>
           </div>
@@ -188,8 +188,8 @@
                 i18n-title="@@M__COMMON__MATURE_CONTENT"
                 >explicit</i
               >
-              <span i18n="@@M__COMMON__CONFIRM_18"
-                >Click to confirm you are 18+</span
+              <span i18n="@@M__COMMON__CONFIRM_EXPLICIT"
+                >Click to view explicit content</span
               >
             </span>
           </div>
