Reverting changes to paywall button

--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -104,7 +104,7 @@
 
   <m-wire--lock-screen
     [(entity)]="blog"
-    *ngIf="blog.wire_threshold"
+    *ngIf="blog.paywall"
     #lockScreen
   ></m-wire--lock-screen>
 
