--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -44,6 +44,14 @@
   style="max-width:740px"
   *ngIf="blog.guid"
 >
+  <ng-container *ngIf="false">
+    <google-ad
+      *ngIf="!session.getLoggedInUser().plus && blog.monetized && index == 0"
+      type="responsive"
+      location="top"
+    ></google-ad>
+  </ng-container>
+
   <div class="mdl-grid" style="width:100%">
     <div class="mdl-cell mdl-cell--12-col">
       <h1 class="m-blog--title">{{blog.title}}</h1>
