--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -2,6 +2,7 @@
   <div class="m-v3Topbar__searchBox" *ngIf="showSearchBar">
     <ng-content select="[search]"></ng-content>
   </div>
+  <m-newPostsButton></m-newPostsButton>
 </ng-template>
 
 <div
