--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -8,7 +8,19 @@
     }
   }
 
+  .m-comments__thread--topLevel {
+    margin-left: 4px;
+    ::ng-deep {
+      > m-comment {
+        .m-comment {
+          padding-left: 16px;
+        }
+      }
+    }
+  }
+
   .m-comments__thread--nested {
+    margin-left: -8px;
     @media screen and (max-width: $max-mobile) {
       margin-left: 43px;
     }
@@ -17,16 +29,19 @@
       .m-comment__toolbar {
         margin-bottom: 4px;
       }
-      .m-comment .minds-avatar {
-        min-width: 25px !important;
-        min-height: 25px !important;
-        img {
-          width: 24px !important;
-          height: 24px !important;
+      .m-comment {
+        padding: 8px 0 8px 8px !important;
+        .minds-avatar {
+          min-width: 25px !important;
+          min-height: 25px !important;
+          img {
+            width: 24px !important;
+            height: 24px !important;
+          }
         }
-      }
-      .m-comment--compact .minds-avatar {
-        margin-top: -9px;
+        .m-comment--compact .minds-avatar {
+          margin-top: -9px;
+        }
       }
     }
   }
