--- a/src/app/common/layout/v3-topbar/new-posts-button/new-posts-button.component.html
+++ b/src/app/common/layout/v3-topbar/new-posts-button/new-posts-button.component.html
@@ -1,7 +1,7 @@
 <div
   class="m-newPostsButton"
   (click)="scrollToNewPosts($event)"
-  [@slide]="(this.service.newPostsAvailable$ | async) ? 'down' : 'up'"
+  [@slide]="active ? 'down' : 'up'"
 >
   <i class="material-icons">refresh</i>
   <span class="m-legible">See newest posts</span>
